<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_color">

    <!-- Reference: https://stackoverflow.com/a/35287222 -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_profile_image"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:cardCornerRadius="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp">
        <androidx.cardview.widget.CardView
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:cardCornerRadius="250dp">
            <ImageView
                android:id="@+id/iv_profile_image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:background="@color/white"
                android:scaleType="centerCrop"/>
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_below="@+id/card_profile_image"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />


    <TextView
        android:id="@+id/text_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@id/text_profile_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp" />


    <TextView
        android:id="@+id/text_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@id/text_phone_number"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="45dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        >
        <ImageView
            android:id="@+id/notification_icon"
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="#00FEF7FF"
            android:src="@android:drawable/ic_dialog_email"
            app:tint="@color/MainTheme1"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/unread_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_notification_overlay"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btn_edit_profile"
        android:layout_width="160dp"
        android:layout_height="45dp"
        android:layout_below="@id/text_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/edit_profile" />

    <Button
        android:id="@+id/btn_my_event"
        android:layout_width="160dp"
        android:layout_height="45dp"
        android:text="My Events"
        android:layout_below="@id/btn_edit_profile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btn_sign_up_event"
        android:layout_width="160dp"
        android:layout_height="45dp"
        android:text="My SignUps"
        android:layout_below="@id/btn_my_event"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp" />

    <Button
        android:id="@+id/btn_admin_functions"
        android:layout_width="160dp"
        android:layout_height="45dp"
        android:text="Manage Users"
        android:layout_below="@id/btn_sign_up_event"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:visibility="invisible" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nav_profile"
        app:menu="@menu/bottom_nav"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>

