<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back_arrow_icon"
        android:id="@+id/back_button"
        android:layout_margin="16dp">

    </ImageButton>

    <ImageView
        android:id="@+id/image_edit_profile_picture"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@android:drawable/sym_def_app_icon"
        android:layout_below="@id/back_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp" />


    <EditText
        android:id="@+id/edit_text_edit_profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Profile Name"
        android:inputType="text"
        android:layout_below="@id/image_edit_profile_picture"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />


    <EditText
        android:id="@+id/edit_text_edit_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Phone Number"
        android:inputType="phone"
        android:layout_below="@id/edit_text_edit_profile_name"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />


    <EditText
        android:id="@+id/edit_text_edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:layout_below="@id/edit_text_edit_phone_number"
        android:layout_marginTop="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp" />


    <Button
        android:id="@+id/button_save_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        android:layout_below="@id/edit_text_edit_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp" />

</RelativeLayout>
